force-app/main/default/objects/Utility_Data_Request__c/Utility_Data_Request__c.object-meta.xml
<CustomObject>
    <label>Utility Data Request</label>
    <nameField>
        <displayFormat>UDR-{00000}</displayFormat>
        <label>Utility Data Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility Data Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>