force-app/main/default/objects/Utility_Data_Request__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>