force-app/main/default/objects/Utility_Data_Request__c/fields/Annual_kWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_kWh__c</fullName>
    <description>Value calculated from UDRP Quantities in the last 12 months where the Measurement Unit = KH and the Measurement Significance Code = 51</description>
    <inlineHelpText>Value calculated from UDRP Quantities in the last 12 months where the Measurement Unit = KH and the Measurement Significance Code = 51</inlineHelpText>
    <label>Annual kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>