force-app/main/default/objects/Utility_Data_Request__c/fields/Average_Demand__c.field-meta.xml
<CustomField>
    <fullName>Average_Demand__c</fullName>
    <description>Value calculated from UDRP Quantities in the last 12 months where the Measurement Unit = K1 and the Measurement Significance Code = 51</description>
    <inlineHelpText>Value calculated from UDRP Quantities in the last 12 months where the Measurement Unit = K1 and the Measurement Significance Code = 51</inlineHelpText>
    <label>Average Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>