force-app/main/default/objects/Utility_Data_Request__c/fields/Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by Boomi integration</inlineHelpText>
    <label>Case Safe ID</label>
    <type>Text</type>
</CustomField>