force-app/main/default/objects/Utility_Data_Request__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>