force-app/main/default/objects/Utility_Data_Request__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>