force-app/main/default/objects/Utility_Data_Request__c/fields/Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>Detail_Status__c</fullName>
    <inlineHelpText>Tracks the status of the USGH EDI request record</inlineHelpText>
    <label>Detail Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Pending</fullName>
                
                    <default>true</default>
                
                    <label>Pending</label>
                
                </value>
            
                <value>
                
                    <fullName>Data Received</fullName>
                
                
                    <label>Data Received</label>
                
                </value>
            
                <value>
                
                    <fullName>Complete</fullName>
                
                
                    <label>Complete</label>
                
                </value>
            
                <value>
                
                    <fullName>Error</fullName>
                
                
                    <label>Error</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>