force-app/main/default/objects/Utility_Data_Request__c/fields/Exception_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason_Code__c</fullName>
    <description>Ex: A13=Other A76=Account not found or invalid
A80=Service, Commodity or Billing Option Not Available
A91=Acct does not have service requested. See ESGData Dictionary for full list.</description>
    <inlineHelpText>Ex: A13=Other A76=Account not found or invalid
A80=Service, Commodity or Billing Option Not Available
A91=Acct does not have service requested. See ESGData Dictionary for full list.</inlineHelpText>
    <label>Exception Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>