force-app/main/default/objects/Utility_Data_Request__c/fields/Exception_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason_Description__c</fullName>
    <label>Exception Reason Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>