force-app/main/default/objects/Utility_Data_Request__c/fields/Glynt_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Glynt_Amount_Due__c</fullName>
    <description>Amount due on utility bill processed by Glynt (e.g. Maine CMP)</description>
    <inlineHelpText>Amount due on utility bill processed by Glynt (e.g. Maine CMP)</inlineHelpText>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>