force-app/main/default/objects/Utility_Data_Request__c/fields/Glynt_Bill_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Glynt_Bill_End_Date__c</fullName>
    <label>Bill End Date</label>
    <type>Date</type>
</CustomField>