force-app/main/default/objects/Utility_Data_Request__c/fields/Glynt_Blended_Rate__c.field-meta.xml
<CustomField>
    <fullName>Glynt_Blended_Rate__c</fullName>
    <formula>Glynt_Amount_Due__c / Glynt_Monthly_kWh_Usage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Rate</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>