force-app/main/default/objects/Utility_Data_Request__c/fields/Glynt_Monthly_kWh_Usage__c.field-meta.xml
<CustomField>
    <fullName>Glynt_Monthly_kWh_Usage__c</fullName>
    <description>Monthly kWh Usage as indicated on bill processed by Glynt (e.g. Maine CMP)</description>
    <inlineHelpText>Monthly kWh Usage as indicated on bill processed by Glynt (e.g. Maine CMP)</inlineHelpText>
    <label>Monthly kWh Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>