force-app/main/default/objects/Utility_Data_Request__c/fields/Government_Credit_Code__c.field-meta.xml
<CustomField>
    <fullName>Government_Credit_Code__c</fullName>
    <description>N=No, account does not have a NYPA Discount
Y=Yes, account does have a NYPA Discount</description>
    <inlineHelpText>N=No, account does not have a NYPA Discount
Y=Yes, account does have a NYPA Discount</inlineHelpText>
    <label>Government Credit Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>