force-app/main/default/objects/Utility_Data_Request__c/fields/Header_Status__c.field-meta.xml
<CustomField>
    <fullName>Header_Status__c</fullName>
    <inlineHelpText>Tracks the status of the USGH record for EDI requests</inlineHelpText>
    <label>Header Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Data Received</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>