force-app/main/default/objects/Utility_Data_Request__c/fields/LDC_Customer_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>LDC_Customer_Eligibility__c</fullName>
    <description>N=No, the account is not receiving Utility Discounts/Incentive Rates
Y=Yes, the account is receiving Utility Discounts/Incentive Rates</description>
    <inlineHelpText>N=No, the account is not receiving Utility Discounts/Incentive Rates
Y=Yes, the account is receiving Utility Discounts/Incentive Rates</inlineHelpText>
    <label>LDC Customer Eligibility</label>
    <length>30</length>
    <type>Text</type>
</CustomField>