force-app/main/default/objects/Utility_Data_Request__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Meter Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>