force-app/main/default/objects/Utility_Data_Request__c/fields/Name_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Name_Qualifier__c</fullName>
    <description>8R=Customer Name</description>
    <inlineHelpText>8R=Customer Name</inlineHelpText>
    <label>Name Qualifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>