force-app/main/default/objects/Utility_Data_Request__c/fields/Num_UDRPs_Annual_kWh__c.field-meta.xml
<CustomField>
    <fullName>Num_UDRPs_Annual_kWh__c</fullName>
    <label>Number of UDRPs used in Annual kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>