force-app/main/default/objects/Utility_Data_Request__c/fields/Old_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Required when LDC acct number has changed in the last 90 days</description>
    <inlineHelpText>Required when LDC acct number has changed in the last 90 days</inlineHelpText>
    <label>Old Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>