force-app/main/default/objects/Utility_Data_Request__c/fields/Premise_Number__c.field-meta.xml
<CustomField>
    <fullName>Premise_Number__c</fullName>
    <label>Premise/PoD ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>