force-app/main/default/objects/Utility_Data_Request__c/fields/Request_Recieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Recieved_Date__c</fullName>
    <label>Request Recieved Date</label>
    <type>DateTime</type>
</CustomField>