force-app/main/default/objects/Utility_Data_Request__c/fields/Sender_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Sender_Transaction_ID__c</fullName>
    <description>Stores the transaction ID provided by ESG in the USGH response file</description>
    <externalId>true</externalId>
    <label>Sender Transaction ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>