force-app/main/default/objects/Utility_Data_Request__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <inlineHelpText>Indicates the service used to retrieve the data for this request</inlineHelpText>
    <label>Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESG</fullName>
                <default>true</default>
                <label>ESG</label>
            </value>
            <value>
                <fullName>Glynt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>