force-app/main/default/objects/Utility_Data_Request__c/fields/Supplier_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Number__c</fullName>
    <formula>Utility__r.Supplier_Account_Number__c</formula>
    <label>Supplier Account Number</label>
    <type>Text</type>
</CustomField>