force-app/main/default/objects/Utility_Data_Request__c/fields/Usage_Sender_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Usage_Sender_Transaction_Id__c</fullName>
    <description>Used to store the sender transaction ID for the Usage History Data returned from ESG. This ID is different from the Parent Transaction ID</description>
    <externalId>true</externalId>
    <label>Usage Sender Transaction Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>