force-app/main/default/objects/Utility_Data_Request__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>Utility Data Requests</relationshipLabel>
    <relationshipName>Utility_Data_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>