force-app/main/default/objects/Utility_Data_Request__c/fields/Utility_Account_Log__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Account Log</label>
    <referenceTo>Utility_Account_Log__c</referenceTo>
    <relationshipLabel>Utility Data Requests</relationshipLabel>
    <relationshipName>Utility_Data_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>