force-app/main/default/objects/Utility_Data_Request__c/fields/Utility_DUNS__c.field-meta.xml
<CustomField>
    <fullName>Utility_DUNS__c</fullName>
    <label>Utility DUNS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>