force-app/main/default/objects/Utility_Data_Request__c/fields/Utility_Formatted_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Utility_Formatted_Account_Number__c</fullName>
    <formula>SUBSTITUTE (
IF( Utility__r.Dual_Data__c ,
  Account_Number__c + Premise_Number__c ,
  IF( Utility__r.Collect_Customer_POD_Number__c ,
      Premise_Number__c ,
      Account_Number__c
     )
   ),
&quot;-&quot;, &quot;&quot;)</formula>
    <label>Utility Formatted Account Number</label>
    <type>Text</type>
</CustomField>