force-app/main/default/objects/Utility_Data_Request__c/fields/Utility_Name__c.field-meta.xml
<CustomField>
    <fullName>Utility_Name__c</fullName>
    <label>Utility Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>