force-app/main/default/objects/Utility_Data_Request__c/validationRules/UAL_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>UAL_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISNEW(), ISBLANK( Utility_Account_Log__c ))</errorConditionFormula>
    <errorDisplayField>Utility_Account_Log__c</errorDisplayField>
    <errorMessage>A Utility Account Log is required to process the UDR when complete.</errorMessage>
</ValidationRule>